--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,5 +32,52 @@ header {
   transform: translate(-50%, -50%);
 }
 header h1 {
-  margin: 0 0;
+  margin: 20px 0;
+  color: #fff;
+  font-size: 240%;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  word-spacing: 4px;
+}
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: 300;
+  text-decoration: none;
+  transition: background-color 0.2s, color 0.2s, border 0.2s;
+}
+
+.btn-full:link,
+.btn-full:visited {
+  margin-right: 15px;
+  border: 1px solid #e67e22;
+  background-color: #e67e22;
+  border-radius: 50px;
+  color: #fff;
+  border: none;
+}
+
+.btn-ghost:link,
+.btn-ghost:visited {
+  border: 1px solid #e67e22;
+  color: #e67d22e7;
+  background-color: none;
+  border-radius: 50px;
+}
+
+.btn-ghost:hover,
+.btn-ghost:active {
+  background-color: #d67e22;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.btn-full:hover,
+.btn-full:active {
+  background-color: rgba(255, 255, 255, 0.795);
+  border: 1px solid #e67e22;
+  font-weight: 500;
+  color: #e67e22;
 }
