--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,6 @@
+/*---------------------------------------------*/
+/* Basic set up */
+/*---------------------------------------------*/
 * {
   margin: 0;
   padding: 0;
@@ -16,21 +19,10 @@ html {
   max-width: 1140px;
   margin: 0 auto;
 }
+/*---------------------------------------------*/
+/* REUSABLE COMPONENTS*/
+/*---------------------------------------------*/
 
-header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(img/hero.jpg);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-}
-.hero-text-box {
-  position: absolute;
-  width: 1140px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 header h1 {
   margin: 20px 0;
   color: #fff;
@@ -40,6 +32,9 @@ header h1 {
   letter-spacing: 1px;
   word-spacing: 4px;
 }
+/*---------------------------------------------*/
+/* BUTTONS*/
+/*---------------------------------------------*/
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -80,4 +75,56 @@ header h1 {
   border: 1px solid #e67e22;
   font-weight: 500;
   color: #e67e22;
+}
+
+/*---------------------------------------------*/
+/* HEADER*/
+/*---------------------------------------------*/
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(img/hero.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+
+.main-nav {
+  float: right;
+  list-style-type: none;
+}
+
+.main-nav li {
+  display: inline-block;
+  margin-left: 40px;
+  margin-top: 55px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 90%;
+  padding: 8px 0;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s;
+}
+.main-nav li a:hover,
+.main-nav li a:active {
+  border-bottom: 2px solid #e67e22;
 }
