--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,14 +23,64 @@ html {
 /* REUSABLE COMPONENTS*/
 /*---------------------------------------------*/
 
-header h1 {
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+}
+h1 {
   margin: 20px 0;
   color: #fff;
   font-size: 240%;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 1px;
   word-spacing: 4px;
+  letter-spacing: 1px;
+}
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+h3 {
+  font-size: 110%;
+  margin-bottom: 15px;
+}
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+section {
+  padding: 80px 0;
+}
+
+.long-copy {
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+}
+.box {
+  padding: 1%;
+}
+.box p {
+  line-height: 145%;
+  font-size: 90%;
+}
+
+.icon-big {
+  font-size: 375%;
+  display: block;
+  color: #e67e22;
+  margin-left: 25%;
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 /*---------------------------------------------*/
 /* BUTTONS*/
