--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -65,6 +65,7 @@ section {
   line-height: 145%;
   width: 70%;
   margin-left: 15%;
+  margin-bottom: 25px;
 }
 .box {
   padding: 1%;
@@ -181,7 +182,9 @@ header {
 
 /* ------------------------------------------------- */
 /* MEALS */
-
+.section-meals {
+  padding: 0;
+}
 .meals-showcase {
   list-style: none;
   width: 100%;
@@ -195,9 +198,20 @@ header {
 .meal-photo {
   width: 100%;
   margin: 0;
+  overflow: hidden;
+  background-color: #000;
 }
 
 .meal-photo img {
+  opacity: 0.7;
   width: 100%;
   height: auto;
+  transform: scale(1.15);
+
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.meal-photo img:hover {
+  transform: scale(1.03);
+  opacity: 1;
 }
