--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,16 @@ html {
   max-width: 1140px;
   margin: 0 auto;
 }
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
 /*---------------------------------------------*/
 /* REUSABLE COMPONENTS*/
 /*---------------------------------------------*/
@@ -214,4 +224,47 @@ header {
 .meal-photo img:hover {
   transform: scale(1.03);
   opacity: 1;
+}
+
+/* ------------------------------------ */
+/*              How it works            */
+/* ------------------------------------ */
+.section-steps {
+  background-color: #f4f4f4;
+}
+.steps-box:first-child {
+  text-align: right;
+  padding-right: 3%;
+  margin-top: 30px;
+}
+.steps-box:last-child {
+  padding-left: 3%;
+  margin-top: 70px;
+}
+.app-screen {
+  width: 40%;
+}
+
+.works-step {
+  margin-bottom: 50px;
+}
+.works-step:last-of-type {
+  margin-bottom: 80px;
+}
+
+.works-step div {
+  color: #e67e22;
+  border: 2px solid #e67e22;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  padding: 5px;
+  float: left;
+  font-size: 150%;
+  margin-right: 25px;
+}
+.btn-app img {
+  height: 50px;
+  margin-right: 10px;
 }
