--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -148,6 +148,7 @@ header {
   height: 100vh;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 .hero-text-box {
   position: absolute;
