--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -269,3 +269,40 @@ header {
   height: 50px;
   margin-right: 10px;
 }
+
+/* --------------------------------- */
+/* cities */
+.box img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 5px 2px 2px rgba(0, 0, 0, 0.7);
+}
+.city-feature {
+  margin-bottom: 5px;
+}
+
+.icon-small {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+
+  line-height: 120%;
+  vertical-align: middle;
+  margin-top: -4px;
+  margin-right: 10px;
+}
+
+.city-feature a {
+  text-decoration: none;
+  color: #e67e22;
+  font-weight: 500;
+}
+
+.city-feature a:hover {
+  padding-bottom: 5px;
+  border-bottom: 2px solid #e67e22;
+}
