--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -308,3 +308,39 @@ header {
   padding-bottom: 5px;
   border-bottom: 2px solid #e67e22;
 }
+
+/* -------------------------------- */
+/* Testimonials */
+
+.section-testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
+    url(img/back-customers.jpg);
+  background-size: cover;
+  color: #fff;
+  background-attachment: fixed;
+}
+
+blockquote {
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+}
+blockquote:before {
+  content: "\201c";
+}
+blockquote:after {
+  content: "\201c";
+}
+cite {
+  display: block;
+  font-size: 90%;
+  margin-top: 25px;
+}
+
+cite img {
+  height: 45px;
+  border-radius: 50%;
+  margin-right: 10px;
+  margin-top: 5px;
+  vertical-align: middle;
+}
