--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -344,3 +344,45 @@ cite img {
   margin-top: 5px;
   vertical-align: middle;
 }
+
+/* -------------------------------- */
+/* pricing */
+
+.section-plans {
+  background-color: #f4f4f4;
+}
+
+.plan-box {
+  background-color: #fff;
+  border-radius: 10px;
+  width: 90%;
+  margin-left: 5%;
+}
+
+.plan-box div {
+  padding: 15px;
+  border-bottom: 1px solid #e8e8e8;
+  box-shadow: 0 2px 2px #efefef;
+}
+
+.plan-price {
+  font-size: 300%;
+  font-weight: 100;
+  margin-bottom: 10px;
+  color: #e67e22;
+}
+.plan-price span {
+  font-size: 30%;
+  font-weight: 300;
+  color: #000;
+}
+.plan-price-meal {
+  font-size: 80%;
+}
+
+.plan-box ul {
+  list-style: none;
+}
+.plan box ul li {
+  padding: 5px 0;
+}
