--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,7 +97,8 @@ section {
 /* BUTTONS*/
 /*---------------------------------------------*/
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type="submit"] {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
@@ -106,7 +107,8 @@ section {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type="submit"] {
   margin-right: 15px;
   border: 1px solid #e67e22;
   background-color: #e67e22;
@@ -131,7 +133,9 @@ section {
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type="submit"]:hover,
+input[type="submit"]:active {
   background-color: rgba(255, 255, 255, 0.795);
   border: 1px solid #e67e22;
   font-weight: 500;
@@ -385,4 +389,33 @@ cite img {
 }
 .plan box ul li {
   padding: 5px 0;
+}
+
+/* -------------------------------- */
+/* contact form */
+
+.contact-form {
+  width: 60%;
+  margin: 0 auto;
+}
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
+textarea {
+  height: 100px;
+}
+
+input[type="checkbox"] {
+  margin: 10px 5px 10px 0;
+}
+*:focus {
+  outline: none;
 }
