--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -300,7 +300,8 @@ header {
   margin-right: 10px;
 }
 
-.city-feature a {
+.city-feature a,
+.footer-nav a {
   text-decoration: none;
   color: #e67e22;
   font-weight: 500;
@@ -308,7 +309,8 @@ header {
   transition: border-bottom 0.2s;
 }
 
-.city-feature a:hover {
+.city-feature a:hover,
+.footer-nav a:hover {
   padding-bottom: 5px;
   border-bottom: 2px solid #e67e22;
 }
@@ -418,4 +420,31 @@ input[type="checkbox"] {
 }
 *:focus {
   outline: none;
+}
+
+footer {
+  background-color: #333;
+  padding-bottom: 30px;
+  padding-top: 20px;
+}
+
+.footer-nav {
+  list-style: none;
+  float: left;
+}
+
+.socials {
+  list-style: none;
+  float: right;
+}
+.footer-nav li,
+.socials li {
+  display: inline-block;
+  margin-right: 20px;
+}
+.socials li:last-child {
+  margin-right: 0;
+}
+footer p {
+  margin-top: 20px;
 }
